# car-aircon-controller

./: .gitignore  .gitmodules  README.md
firmware/: .clang-format  CMakeLists.txt  Makefile  avr-gcc-toolchain.cmake  eserial.py
firmware/inc/: font-15x18.h  font-6x7.h  main.h  message_handler.h  message_structures.h  persistent_data.h  test-font.h
firmware/src/: main.c  message_handler.c  persistent_data.c
firmware/src/tests/: bench-psu-meters.c  minimal_test.c  test.c  tmp_fan.c  volt-current-meter.c
hardware/aircon-control/: aircon-control-rounded.kicad_pcb  aircon-control-rounded.kicad_pro  aircon-control.kicad_pcb  aircon-control.kicad_pro  aircon-control.kicad_sch
hardware/aircon-control/aircon control gerbers/: aircon-control-B_Cu.gbr  aircon-control-B_Mask.gbr  aircon-control-B_Silkscreen.gbr  aircon-control-Edge_Cuts.gbr  aircon-control-F_Cu.gbr  aircon-control-F_Mask.gbr  aircon-control-F_Silkscreen.gbr  aircon-control-NPTH-drl_map.gbr  aircon-control-NPTH.drl  aircon-control-PTH-drl_map.gbr  aircon-control-PTH.drl  aircon-control-job.gbrjob
hardware/aircon-control/bom/: ibom.html
